tests/rosetta/out/Smalltalk/checkpoint-synchronization-3.out
/tmp/checkpoint-synchronization-3.st:7: parse error, expected ']'
